--- a/pages/categories.html
+++ b/pages/categories.html
@@ -1,11 +1,11 @@
 ---
 layout: page
-title: 文章分类
+title: 分類
 ---
 
 <div class="page page-categories">
   <div class="list-category">
-    <h2>所有分类</h2>
+    <h2>すべて</h2>
     <div>
       {%- for category in site.categories %}
       <a href="javascript:document.getElementById('{{ category[0] }}').scrollIntoView()">{{ category[0] }}</a>
