--- a/pages/search.html
+++ b/pages/search.html
@@ -1,12 +1,12 @@
 ---
 layout: page
-title: 搜索
+title: 検索
 ---
 
 <div class="page page-search">
   <input id="search-input" type="text" placeholder="请在这里输入关键词^_^"></input>
   <h1>
-    <span>搜索结果</span>
+    <span>検索結果</span>
     <img src="{{site.baseurl}}/static/img/loading.svg">
   </h1>
   <ul class="list-search">
