--- a/pages/search.html
+++ b/pages/search.html
@@ -4,7 +4,7 @@ title: 検索
 ---
 
 <div class="page page-search">
-  <input id="search-input" type="text" placeholder="にゃ、ここ、入力してよ"></input>
+  <input id="search-input" type="text" placeholder="にゃ、ここで、入力してよ"></input>
   <h1>
     <span>検索結果</span>
     <img src="{{site.baseurl}}/static/img/loading.svg">
