hyperlinked to game-subpage

--- a/pages/game.html
+++ b/pages/game.html
@@ -1,9 +1,9 @@
 ---
 layout: mypost
-title: コメント
+title: ゲーム
 ---
 
-<p>伝言板は開発されておらず、Googleにジャンプ．．．</p>
+<p>ゲーム頁にジャンプする．．．</p>
 
 <p><a href="{{ site.tucaoUrl }}">ジャンプしていない場合は手動でこちらをクリックしてください</a></p>
 
