--- a/pages/game.html
+++ b/pages/game.html
@@ -5,8 +5,8 @@ title: ゲーム
 
 <p>ゲーム頁にジャンプする．．．</p>
 
-<p><a href="{{ site.subUrl }}">ジャンプしていない場合は手動でこちらをクリックしてください</a></p>
+<p><a href="{{ site.gsubUrl }}">ジャンプしていない場合は手動でこちらをクリックしてください</a></p>
 
 <script language="javascript" type="text/javascript">
-  window.location.href = '{{site.subUrl}}'
+  window.location.href = '{{site.gsubUrl}}'
 </script>
