--- a/pages/book.html
+++ b/pages/book.html
@@ -5,8 +5,8 @@ title: 書籍
 
 <p>書籍頁にジャンプする．．．</p>
 
-<p><a href="{{ site.bsubUrl }}">ジャンプしていない場合は手動でこちらをクリックしてください</a></p>
+<p><a href="{{ site.bookUrl }}">ジャンプしていない場合は手動でこちらをクリックしてください</a></p>
 
 <script language="javascript" type="text/javascript">
-  window.location.href = '{{site.bsubUrl}}'
+  window.location.href = '{{site.bookUrl}}'
 </script>
